// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BlockList > passes down the className prop 1`] = `
<DocumentFragment>
  <div
    class="_blockList_f8cc7f foo"
  />
</DocumentFragment>
`;

exports[`BlockList > render <BlockList /> with children 1`] = `
<DocumentFragment>
  <div
    class="_blockList_f8cc7f"
  >
    <div
      class="_block_17898c"
    >
      Block 1
    </div>
    <div
      class="_block_17898c"
    >
      Block 2
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockList > render an empty <BlockList /> 1`] = `
<DocumentFragment>
  <div
    class="_blockList_f8cc7f"
  />
</DocumentFragment>
`;
